# jupyterlab-lego-boost

./: .eslintignore  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: binder-on-pr.yml  build.yml  check-release.yml
binder/: environment.yml  postBuild
examples/: LED-demo.jpblockly  circles-demo.jpblockly  controller.ipynb  demo.jpblockly  movement-example.jpblockly  sensors-demo.jpblockly  sensors.jpblockly
jupyterlab_lego_boost/: __init__.py
src/: index.ts  lego_boost_python_generators_and_blocks.js
