[build-system]
requires = ["hatchling>=1.9.0", "hatch-nodejs-version", "jupyterlab~=3.4"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-lego-boost"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ['jupyterlab-blockly>=0.2.1,<0.3']
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
env = ["bleak", "pylgbst"]


[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build]
ignore-vcs = true

[tool.hatch.build.targets.wheel.shared-data]
"install.json" = "share/jupyter/labextensions/jupyterlab-lego-boost/install.json"
"jupyterlab_lego_boost/labextension" = "share/jupyter/labextensions/jupyterlab-lego-boost/"


[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.6.2"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["jupyterlab_lego_boost/labextension/static/style.js", "jupyterlab_lego_boost/labextension/package.json"]
skip-if-exists = ["jupyterlab_lego_boost/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]


[tool.check-manifest]
ignore = ["jupyterlab_lego_boost/labextension/**", "yarn.lock", ".*", "package-lock.json"]


#[tool.jupyter-releaser]
#skip = ["check-links"]

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = ["python -m pip install jupyterlab~=3.4", "jlpm"]
before-build-python = ["jlpm clean:all"]
